--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group = 'io.github.easterngamer'
-version = '1.0'
+version = '1.1'
 
 repositories {
     mavenCentral()
@@ -12,4 +13,22 @@ repositories {
 dependencies {
     implementation 'io.projectreactor:reactor-core:3.6.3'
     implementation 'com.google.cloud:google-cloud-firestore:3.17.0'
+}
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url 'https://maven.pkg.github.com/easterngamer/monofirebase'
+            credentials {
+                username = System.getenv("GITHUB_USERNAME")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+            artifactId = 'monofirebase'
+        }
+    }
 }
